# editer

./: .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  QUICK_START.md  README.md  checklist.md  goal.md  mado.yaml  pyproject.toml  pyrightconfig.json
.claude/agents/: environment-steward.md  repo-researcher.md
.codex/: README.md
.codex/agents/: detailed_design_reviewer.toml  detailed_designer.toml  docs_workflow_steward.toml  execution_planner.toml  explorer.toml  literature_researcher.toml  ml_science_reviewer.toml  plan_reviewer.toml  project_reviewer.toml  python_reviewer.toml  report_reviewer.toml  requirements_organizer.toml  reviewer.toml  worker.toml
.devcontainer/: devcontainer.json  docker-compose.runtime.yml  docker-compose.yml  generate-runtime-compose.sh  post-attach.sh
.github/: copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: agent_canon.md
.github/skills/: README.md
.github/workflows/: agent-coordination.yml  ci.yml  docker-build.yml
agents/: COMMUNICATION_PROTOCOL.md  README.md  TASK_WORKFLOWS.md  USER_GUIDE_JA.md  agents_config.json  task_catalog.yaml
agents/canonical/: CLI_ENTRYPOINTS.md  CODEX_SUBAGENTS.md  CODEX_WORKFLOW.md  README.md  skills.md
agents/legacy/: README.md
agents/skills/: README.md  agent-orchestration.md  catalog.yaml  change-review.md  code-review.md  codex-cli.md  codex-task-workflow.md  comprehensive-review.md  copilot-cli.md  critical-review.md  docs-completeness-review.md  docs-consistency-review.md  environment-maintenance.md  experiment-change-loop.md  experiment-lifecycle.md  experiment-workflow.md  literature-survey.md  md-style-check.md  project-health.md  project-review.md  python-review.md  repo-onboarding.md  report-review.md  research-perspective-review.md  research-workflow.md  static-check.md  static-validation.md  subagent-bootstrap.md  worktree-health.md  worktree-start.md
agents/templates/: artifact_review.md  design_review.md  fair_data_review.md  intent_brief.md  ml_science_review.md  schedule_review.md  scientific_computing_review.md
cmake/: README.md
docker/: Dockerfile  README.md  codex-container-profiles.toml  entrypoint.sh  python-execution-rules.toml  register_safe_directories.sh  requirements.txt
docker/packs/: default-host-docker.toml  default.toml
documents/: AGENTS_COORDINATION.md  BRANCH_SCOPE.md  DOCSTRING_GUIDE.md  README.md  REVIEW_PROCESS.md  SHARED_RUNTIME_SURFACES.md  SKILL_IMPLEMENTATION_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW_GUIDE.md  WORKFLOW_GUIDE_EXPERIMENTER.md  WORKFLOW_GUIDE_IMPLEMENTER.md  WORKFLOW_GUIDE_OPERATIONS.md  WORKFLOW_INVENTORY.md  WORKTREE_SCOPE_TEMPLATE.md  academic-writing-workflow.md  adaptive-improvement-workflow.md  agent-canon-github-remote.md  agent-canon-pr-workflow.md  agent-canon-subtree-migration.md  coding-conventions-cpp.md  coding-conventions-experiments.md  coding-conventions-house-style.md  coding-conventions-project.md  coding-conventions-python.md  coding-conventions-testing.md  coding-conventions.md  cpp-build-layout.md  experiment-critical-review.md  experiment-registry.md  experiment-report-style.md  experiment-workflow.md  experiment_runner.md  implementation-waterfall-workflow.md  linux-wsl-host-requirements.md  long-form-writing-workflow.md  mado_command_list.md  mado_editor_backend_design.md  mado_manual_checklist.md  mado_plugin_policy.md  mado_terminal_architecture.md  (+8 more)
documents/conventions/: README.md
documents/design/: README.md  protocols.md
documents/templates/: README.md  server_host_inventory.template.md  server_runtime_layout.template.toml
documents/tools/: README.md  TOOLS_DIRECTORY.md
experiments/: README.md  _template  registry.toml
experiments/_template/: README.md  cases.py  experimentcode.py
experiments/report/: README.md
fixtures/mado_workspace/: manual_checklist.md
include/editor_proto/: duplicate_policy.hpp  focus_graph.hpp  mado_command_router.hpp  plugin_registry.hpp  terminal_session.hpp  workspace_registry.hpp
include/project_template/: jax_export_smoke.hpp
memory/: candidates  global  methods  subagent_loadouts.yaml
notes/: README.md  editor_kickoff_questions_ja.md  prototype_execution_plan_ja.md
notes/experiments/: README.md  REPORT_TEMPLATE.md
notes/knowledge/: environment_setup.md  experiment_directory_planning.md  experiment_operations.md  path_resolution.md
notes/worktrees/: README.md
references/: README.md
references/workflow/: implementation-waterfall.md
reports/: goal_work_breakdown.md  token_efficiency_comparison.md
scripts/: README.md  check_convention_consistency.py  check_doc_test_triplet.py  docker_dependency_validator.py  extract_deps_from_svg.sh  guide.sh  init_from_template.sh  push_origin.sh  requirement_sync_validator.py  run_comprehensive_review.sh  run_pytest_with_logs.sh  start_repository.sh  sync_agent_canon.sh
scripts/agent_tools/: smoke_test_research_perspective_pack.py
scripts/ci/: PRE_REVIEW_GUIDE.md  check_agent_canon_pr.sh  check_docker_build.sh  check_experiment_registry.py  check_fresh_clone.sh  check_server_readiness.py  container_runtime.py  pre_review.sh  render_devcontainer_compose.py  run_all_checks.sh  run_codex_in_repo_container.py  run_container_pack.py  run_docs_checks.sh  run_in_repo_container.py  run_python_in_dockerfile.py  run_repo_program.py
scripts/experiments/: create_experiment_topic.py  registry_lib.py  run_managed_experiment.py  sync_experiment_registry_context.py
scripts/hlo/: summarize_hlo_jsonl.py
scripts/shared/: error_handler.py
scripts/tools/: audit_and_fix_links.py  check_markdown_lint.py  check_markdown_math.py  create_design_template.py  find_similar_documents.py  fix_markdown_code_blocks.py  fix_markdown_docs.py  fix_markdown_headers.py  format_markdown.py  organize_designs.py
scripts/validation/: triplet_validator.py
src/: README.md  duplicate_policy.cpp  editor_gui_proto.cpp  editor_proto_cli.cpp  focus_graph.cpp  mado_command_router.cpp  plugin_registry.cpp  terminal_session.cpp  workspace_registry.cpp
tests/: __init__.py
tests/tools/: __init__.py  (+5 more)
(+57 files in other folders)
